# libjkiss

./: .gitignore  LICENSE  Makefile.am  README  configure.ac  jkiss.pc.in
eg/: .gitignore  bias.c  customseed.c  dothreadrate  makefile  threadrate.c  uniform-bias.c
lib/: Makefile.am  jkiss.c  jkiss.h
man/: Makefile.am  jkiss.3
